@startuml

title __DTO's Class Diagram__\n

  namespace  {
    namespace du.hm.cs.katz.swt2.agenda {
      namespace service {
        namespace dto {
          class edu.hm.cs.katz.swt2.agenda.service.dto.OwnerTaskDto {
              + OwnerTaskDto()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.hm.cs.katz.swt2.agenda {
      namespace service {
        namespace dto {
          class edu.hm.cs.katz.swt2.agenda.service.dto.OwnerTopicDto {
              + OwnerTopicDto()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.hm.cs.katz.swt2.agenda {
      namespace service {
        namespace dto {
          class edu.hm.cs.katz.swt2.agenda.service.dto.StatusDto {
              + StatusDto()
              + getStatus()
              + setStatus()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.hm.cs.katz.swt2.agenda {
      namespace service {
        namespace dto {
          class edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTaskDto {
              + SubscriberTaskDto()
              + getStatus()
              + setStatus()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.hm.cs.katz.swt2.agenda {
      namespace service {
        namespace dto {
          class edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTopicDto {
              - title : String
              - uuid : String
              + SubscriberTopicDto()
              + getCreator()
              + getTitle()
              + getUuid()
              + setTitle()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.hm.cs.katz.swt2.agenda {
      namespace service {
        namespace dto {
          class edu.hm.cs.katz.swt2.agenda.service.dto.TaskDto {
              ~ id : Long
              ~ title : String
              + TaskDto()
              + getId()
              + getTitle()
              + getTopic()
              + setTitle()
              + setTopic()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.hm.cs.katz.swt2.agenda {
      namespace service {
        namespace dto {
          class edu.hm.cs.katz.swt2.agenda.service.dto.UserDisplayDto {
              - login : String
              + UserDisplayDto()
              + UserDisplayDto()
              + getDisplayName()
              + getLogin()
              + setLogin()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.hm.cs.katz.swt2.agenda {
      namespace service {
        namespace dto {
          class edu.hm.cs.katz.swt2.agenda.service.dto.UserManagementDto {
              - password : String
              + UserManagementDto()
              + UserManagementDto()
              + getPassword()
              + setPassword()
          }
        }
      }
    }
  }
  

  edu.hm.cs.katz.swt2.agenda.service.dto.OwnerTaskDto -up-|> edu.hm.cs.katz.swt2.agenda.service.dto.TaskDto
  edu.hm.cs.katz.swt2.agenda.service.dto.OwnerTopicDto -up-|> edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTopicDto
  edu.hm.cs.katz.swt2.agenda.service.dto.StatusDto o-- edu.hm.cs.katz.swt2.agenda.common.StatusEnum : status
  edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTaskDto -up-|> edu.hm.cs.katz.swt2.agenda.service.dto.TaskDto
  edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTaskDto o-- edu.hm.cs.katz.swt2.agenda.service.dto.StatusDto : status
  edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTopicDto o-- edu.hm.cs.katz.swt2.agenda.service.dto.UserDisplayDto : creator
  edu.hm.cs.katz.swt2.agenda.service.dto.TaskDto o-- edu.hm.cs.katz.swt2.agenda.service.dto.SubscriberTopicDto : topic
  edu.hm.cs.katz.swt2.agenda.service.dto.UserManagementDto -up-|> edu.hm.cs.katz.swt2.agenda.service.dto.UserDisplayDto


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
